tests/rosetta/transpiler/Java/conditional-structures-6.java
public class Main {
    static void example6(int value) {
        value == 1 ? null : value == 2 ? null : value == 3 ? null : null;
    }
    public static void main(String[] args) {
    }
}
